# wordmind

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini  test_wordmind.py  wordmind.py  wordmind_cli.py  wordmind_guesser.py
.github/workflows/: ci_test.yml  coverage.yml
game/: engine.py  guesser.py
src/wordmind/: main.py
src/wordmind/game/: guesser.py
tests/: test_engine.py  test_guesser.py  test_wordmind.py
