[project]
name = "wordmind"
version = "0.2"
description = "a silly wordle knockoff for the command-line"
authors = [{ name = "Steven Wilcox", email = "steven@wilcoxzone.com" }]
dependencies = ["colorama", "blessed"]
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/swilcox/wordmind"

[tool]
rye = { dev-dependencies = ["pytest>=8.2.0", "pytest-cov>=5.0.0"] }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "ignore::DeprecationWarning"
