[project]
name = "wordmind"
dynamic = ["version"]
description = "A silly wordle cli knockoff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["colorama>=0.4.6", "blessed>=1.20.0"]

[project.scripts]
wordmind = "wordmind.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.2", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "ignore::DeprecationWarning"

[tool.hatch.version]
path = "src/wordmind/__init__.py"
